2005-01-21  Jackson Harper  <jackson@ximian.com>

	* TabControl.cs: Set the SelectedIndex property when SelectedTab
	is set so that the page visibility is updated and the tabs are
	sized correctly.

2005-01-21  Jackson Harper  <jackson@ximian.com>

	* TabControl.cs: Use cliping rectangle for blitting. Give the
	theme the clipping rect so we can do clipping while
	drawing. Remove some debug code.

2005-01-21  Jackson Harper  <jackson@ximian.com>

	* TabPage.cs: Add a new method so tab pages can force the tab
	control to recalculate the tab page sizes.
	* TabControl.cs: UpdateOwner needs to make the tab control recalc
	sizes.

2005-01-20  Jackson Harper  <jackson@ximian.com>

	* ThemeWin32Classic.cs: Clip text to the staus bar panels rects.

2005-01-20  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: Set the bounds for nodes properly. They were
	getting screwed up when checkboxes were not enabled, but images
	were.

2005-01-20  Jordi Mas i Hernandez <jordi@ximian.com>

	* ListBox.cs:
		- Owner draw support
		- Fixes		
		
2005-01-20  Jackson Harper  <jackson@ximian.com>

	* XplatUIStructs.cs: More misc keys
	* X11Keyboard.cs: Ignore some control keys.

2005-01-20  Jackson Harper  <jackson@ximian.com>

	* X11Structs.cs: Add the modmaps to the keymask struct and tabify.
	* X11Keyboard.cs: Set the AltGr mask when we get a key event.

2005-01-19  Peter Bartok  <pbartok@novell.com>

	* Control.cs: Un-selecting the control when it is loosing focus

2005-01-19  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: Hook up to the text controls leave event so we can
	end editing when the users clicks outside the text box.
	
2005-01-19  Jackson Harper  <jackson@ximian.com>

	* X11Keyboard.cs: Fix typo that was causing the wrong keycodes to
	get set in the conversion array.

2005-01-19  Peter Bartok  <pbartok@novell.com>

	* Application.cs (ModalRun): Added a call to CreateControl to ensure
	  focus is properly set
	* Button.cs:
	  - Added missing attributes