@@ -1,3 +1,9 @@
+2005-01-22  Jordi Mas i Hernandez <jordi@ximian.com>
+
+	* ComboBox.cs
+		- Fixes IntegralHeight
+		- ToString method
+
 2005-01-21  Jackson Harper  <jackson@ximian.com>
 
 	* TabControl.cs: Set the SelectedIndex property when SelectedTab
